--- a/.github/workflows/build_conda.yaml
+++ b/.github/workflows/build_conda.yaml
@@ -25,6 +25,8 @@ jobs:
           environment-name: build
           extra-specs: |
             python=${{ matrix.python-version }}
+      - name: Install mamba
+        run: micromamba install mamba
       - name: Build and upload the conda packages
         uses: gb119/action-build-and-upload-conda-packages@v0.1.5
         with:
