--- a/.github/workflows/build_conda.yaml
+++ b/.github/workflows/build_conda.yaml
@@ -26,7 +26,7 @@ jobs:
           extra-specs: |
             python=${{ matrix.python-version }}
       - name: Install mamba
-        run: micromamba install -n build mamba
+        run: micromamba install -n build -c conda-forge mamba
       - name: Build and upload the conda packages
         uses: gb119/action-build-and-upload-conda-packages@v0.1.5
         with:
