--- a/.github/workflows/build_conda.yaml
+++ b/.github/workflows/build_conda.yaml
@@ -13,20 +13,22 @@ jobs:
     strategy:
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: [3.8, 3.9, "3.10"]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install Conda environment with Micromamba
-        uses: mamba-org/provision-with-micromamba@main
+      - name: Conda environment creation and activation
+        uses: conda-incubator/setup-miniconda@v2
         with:
+          python-version: ${{ matrix.python-version }}
           environment-file: env.yaml
-          environment-name: build
-          extra-specs: |
-            python=${{ matrix.python-version }}
+          activate-environment: build
+          auto-update-conda: true
+          auto-activate-base: false
+          show-channel-urls: true
       - name: Build and upload the conda packages
-        uses: uibcdf/action-build-and-upload-conda-packages@v1.1.0
+        uses: uibcdf/action-build-and-upload-conda-packages@v1.1-beta.1
         with:
           meta_yaml_dir: .
           overwrite: true
