--- a/meta.yaml
+++ b/meta.yaml
@@ -5,13 +5,9 @@ package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
-source:
-  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
-  sha256: deb932be55b1d9419e37dc4d65dfbfeb8d307b71c8c11fd52f159aba5fc0deed
-
 build:
   number: 0
-  script: "{{ PYTHON }} -m pip install . -vv"
+  script: "{{ PYTHON }} -m pip install -vv --no-deps {{ name }}"
 
 requirements:
   host:
