--- a/meta.yaml
+++ b/meta.yaml
@@ -5,17 +5,21 @@ package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
+source:
+  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  sha256: deb932be55b1d9419e37dc4d65dfbfeb8d307b71c8c11fd52f159aba5fc0deed
+
 build:
   number: 0
-  script: "{{ PYTHON }} -m pip install -vv --no-deps {{ name }}"
+  script: "{{ PYTHON }} -m pip install -U pip; {{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
-    - django >=3.2
+    - django >=2.2
     - pip
     - python
   run:
-    - django >=3.2
+    - django >=2.2
     - python
 
 test:
