--- a/meta.yaml
+++ b/meta.yaml
@@ -11,15 +11,15 @@ source:
 
 build:
   number: 0
-  script: "{{ PYTHON }} -m pip install -U pip; {{ PYTHON }} -m pip install . -vv"
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
-    - django >=2.2
+    - django >=3.2
     - pip
     - python
   run:
-    - django >=2.2
+    - django >=3.2
     - python
 
 test:
