--- a/meta.yaml
+++ b/meta.yaml
@@ -11,17 +11,18 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
-    - django >=3.2
+    - django >=4
     - pip
     - python
     - setuptools-scm
     - setuptools
   run:
-    - django >=3.2
+    - django >=4
     - python
 
 test:
